--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Synth Lite</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Poirot+One&family=Merriweather&family=Concert+One&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Poiret+One&family=Merriweather&family=Concert+One&family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -395,7 +395,7 @@
     <footer>
         <div class="footer-content">
             <span class="footer-links">
-                <a href="https://github.com/5ynthaire/5YN-ColorSynthLite-HTML">Color Synth Lite</a> &mdash; MIT License | 
+                GitHub Repository: <a href="https://github.com/5ynthaire/5YN-ColorSynthLite-HTML/">Color Synth Lite</a> &mdash; MIT License | 
                 <a href="https://github.com/5ynthaire/">@5ynthaire</a>
             </span>
         </div>
